[project]
name = "pythumbnail"
authors = [{name = "wfrowell", email = "github@imacrazyguy.xyz"}]
readme = "README.md"
version = "2.0.5"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "ossapi",
    "rosu_pp_py",
    "pillow",
    "osrparse"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools.packages.find]
# This tells setuptools to look for your code, but skip these folders
exclude = [
    "assets",
    "hooks",
    "config.json",
    "*.spec",
    ".gitignore"
]